--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -55,6 +55,10 @@ Offline.on('up', function() {
 
   {# Training Bit COVER #}
   <div id="trainingbit-cover" style="background-image: url({{trainingbit.getImage}})">
+    <a class="back-button" href="{% url 'skills:trainingbit_edit' trainingbit.pk %}">
+      <span class="icon circled-left"></span>Back to training bit cover
+    </a>
+    <span class="label white-on-red">{{ trainingbit.get_label_display }}</span>
     <h1>{{ trainingbit.name }}</h1>
   </div>
   <p class="trainingbit-description">{{ trainingbit.description }}</p>
