--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -36,6 +36,10 @@
 
 {# Training Bit COVER #}
 <div id="trainingbit-cover" style="background-image: url({{trainingbit.getImage}})">
+  <a class="back-button" href="{% url 'skills:trainingbit_cover' trainingbit.pk %}">
+    <span class="icon circled-left"></span>Back to training bit cover
+  </a>
+  <span class="label white-on-red">{{ trainingbit.get_label_display }}</span>
   <h1>{{ trainingbit.name }}</h1>
 </div>
 
