--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -16,6 +16,8 @@ $gcl-browngray: #E8E7D6;  // Info-box
 $gcl-red: #ED1C24;
 $gcl-blue: #4B81BF;
 
+$gcl-comment-color: rgb(222, 222, 222); // Backgrounds
+
 $page-buttons-overlay: absolute;
 
 $button-font-size: rem-calc(12px);
