--- a/skills/templates/skills/partials/comment_entry.html
+++ b/skills/templates/skills/partials/comment_entry.html
@@ -3,11 +3,30 @@
 
 <div class="comment gcl-object" style="margin-left:{{ comment.level }}rem;" id="comment-{{comment.id}}">
 
-  <div class="headline">
-    <img src="{{ comment.author.getImage }}">
-    <a href="{% url 'profile' comment.author.id %}" class="author">{{ comment.author.username }}</a>
-    <span class="date">{{ comment.created_at|pretty_timesince }}</span>
+    {% if comment.is_deleted %}
+    <span class="icon block"></span>
+    {% else %}
+    {% if maxchars %}
+    <p class="content">{{ comment.text|truncatechars:maxchars }}</p>
+    {% else %}
+    <p class="content">{{ comment.text }}</p>
+    {% endif %}
+    {% endif %}
 
+  <div class="metadata-fat">
+    <div class="columns small-2 profile-picture">
+      <img src="{{ comment.author.getImage }}">
+    </div>
+    <div class="columns small-10 text">
+      comment by <a href="{% url 'profile' comment.author.id %}" class="author">{{ comment.author.username }}</a>
+      {{ comment.created_at|pretty_timesince }}<br>
+      {% if show_project %}
+      on <a href="{{ comment.project.get_absolute_url }}">{{ comment.project.name|truncatechars:30 }}</a>
+      {% endif %}
+    </div>
+  </div>
+
+    {% comment %}
     <div class="moderation">
       {# Delete comment button #}
       {% permission request.user has 'skills.delete_comment' of comment %}
@@ -27,19 +46,10 @@
           </p>
         </form>
       </div>
-      {% endcomment %}
+      {#{% endcomment %}#}
     </div>
-  </div>
+    {% endcomment %}
 
-    {% if comment.is_deleted %}
-    <span class="icon block"></span>
-    {% else %}
-    {% if maxchars %}
-    <p class="content">{{ comment.text|truncatechars:maxchars }}</p>
-    {% else %}
-    <p class="content">{{ comment.text }}</p>
-    {% endif %}
-    {% endif %}
 
 
     {# Reply to comment button #}
@@ -47,11 +57,6 @@
     {% if comment.allow_thread %}<a href="{% url 'skills:comment_post' %}" data-parent-pk="{{ comment.pk }}" class="reply">Reply</a>{% endif %}
     {% endif %}
 
-    {% if show_project %}
-    <div class="from">
-      commented on <a href="{{ comment.project.get_absolute_url }}"><h6 class="project-title">{{ comment.project.name|truncatechars:30 }}</h6></a>
-    </div>
-    {% endif %}
   <!-- </div> -->
 
 
