--- a/scss/trainingbit_cover.scss
+++ b/scss/trainingbit_cover.scss
@@ -1,4 +1,4 @@
-$left-margin: rem-calc(40px);
+$left-margin: rem-calc(20px);
 
 #trainingbit-cover {
 
@@ -57,27 +57,33 @@ $left-margin: rem-calc(40px);
   padding-right: rem-calc(40px);
 }
 
-.sidebar {
-  padding-left: rem-calc(30px);
-  padding-right: rem-calc(30px);
+.start-trainingbit-container {
+  float: left;
+}
+
+.metadata {
+  float: right;
+  text-align: center;
+  margin-bottom: 3rem;
+  .icon {
+    font-size: rem-calc(40px);
+    margin-right: rem-calc(5px);
+  }
+  .count {
+    font-size: rem-calc(13px);
+    margin-right: rem-calc(10px);
+  }
+}
+
+.cover-description {
+  padding-left: $left-margin;
+}
+
+.gcl-column.sidebar {
+  margin-left: 2.5%;
   border-left: 1px solid $gcl-lightgray;
-
-  .metadata {
-    text-align: center;
-    margin-bottom: 3rem;
-    .icon {
-      font-size: rem-calc(40px);
-      margin-right: rem-calc(5px);
-    }
-    .count {
-      font-size: rem-calc(13px);
-      margin-right: rem-calc(10px);
-    }
-  }
-
-  .button.like, .button.unlike {
-    margin-top: 1rem;
-  }
+  padding-left: 2.5%;
+  width: 32.5%;
 
   .author-info {
     img {
@@ -90,12 +96,18 @@ $left-margin: rem-calc(40px);
       font-size: rem-calc(13px);
     }
   }
+  &>div {
+    clear: both;
+  }
 
   ul {
     font-size: rem-calc(12px);
     line-height: 1.8;
     font-weight: 500;
     color: $gcl-lightgray !important;
+  }
+  h5 {
+    text-transform: uppercase;
   }
 }
 
