--- a/scss/trainingbit_cover.scss
+++ b/scss/trainingbit_cover.scss
@@ -61,22 +61,15 @@ $left-margin: rem-calc(20px);
   float: left;
 }
 
-.metadata {
-  float: right;
-  text-align: center;
-  margin-bottom: 3rem;
-  .icon {
-    font-size: rem-calc(40px);
-    margin-right: rem-calc(5px);
-  }
-  .count {
-    font-size: rem-calc(13px);
-    margin-right: rem-calc(10px);
-  }
-}
 
 .cover-description {
   padding-left: $left-margin;
+
+  .metadata-inline-row {
+    float: right;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
 }
 
 .gcl-column.sidebar {
@@ -85,17 +78,6 @@ $left-margin: rem-calc(20px);
   padding-left: 2.5%;
   width: 32.5%;
 
-  .author-info {
-    img {
-      float: left;
-      width: rem-calc(45px);
-      margin-right: rem-calc(13px);
-      margin-bottom: rem-calc(10px);
-    }
-    .date {
-      font-size: rem-calc(13px);
-    }
-  }
   &>div {
     clear: both;
   }
