[Design] trainingbits_grid: Add "Done" label
The "Done" signifies that the user has completed the training bit

--- a/global_change_lab/templates/partials/trainingbits_grid.html
+++ b/global_change_lab/templates/partials/trainingbits_grid.html
@@ -6,6 +6,9 @@
     <div class="wrapper">
       <div class="image" style="background-image: url({{ trainingbit.getImage }})">
         <div class="label">{{ trainingbit.get_label_display }}</div>
+        {% if trainingbit in request.user.trainingbits_completed.all %}
+        <div class="completion-text">Done</div>
+        {% endif %}
       </div>
     </div>
     {% if hide_description %}
