--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -16,16 +16,10 @@
   {% endpermission %}
 </div>
 
-<div id="trainingbit-cover" style="background-image: url({{trainingbit.getImage}})">
-  {% if current_skill_id %}
-  <a class="back-button" href="{% url 'skills:skill_view' current_skill_id %}">
-    <span class="icon circled-left"></span>Back to skill
-  </a>
-  {% endif %}
-  <span class="label white-on-red">{{ trainingbit.get_label_display }}</span>
-  <h1>{{ trainingbit.name }}</h1>
+{% with 'Back to skill' as back_text %}
+{% include 'skills/partials/trainingbit_header.html' %}
+{% endwith %}
 
-</div>
 <div class="row">
   <div class="gcl-column2 cover-description">
     <p class="trainingbit-description">{{ trainingbit.description }}</p>
