[Design] Align like count with rest of metadata
The like count was offset slightly in the horizontal direction from the
rest of the metadata numbers.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -314,16 +314,18 @@ p.skill-description, p.trainingbit-description {
 }
 
 #like-count {
-  $line_height: 1.2rem;
+  $line_height: 1.0em;
   line-height: $line_height;
-  height: rem-calc(15px); //1.2rem;
+  height:      $line_height;
   overflow: hidden;
   display: inline-block;
+  position: relative;
+  top: 0.09rem;
 
   div {
     position: relative;
     &.like {
-      top: 0rem;
+      top: 0;
     }
     &.unlike {
       top: -$line_height;
