[Fix] project_view: Misspelled `body-classes`

--- a/skills/templates/skills/project_view.html
+++ b/skills/templates/skills/project_view.html
@@ -2,7 +2,7 @@
 {% load gcl_utils %}
 {% load embed_video_tags %}
 
-{% block body_classes %}project-view{% endblock %}
+{% block body-classes %}project-view{% endblock %}
 
 {% block content %}
 {% with 'Go to training bit' as back_text %}
