--- a/skills/templates/skills/partials/comment_entry.html
+++ b/skills/templates/skills/partials/comment_entry.html
@@ -14,15 +14,10 @@
     {% endif %}
 
   <div class="metadata-fat">
-    <div class="columns small-2 profile-picture">
-      <img src="{{ comment.author.getImage }}">
-    </div>
-    <div class="columns small-10 text">
-      comment by <a href="{% url 'profile' comment.author.id %}" class="author">{{ comment.author.username }}</a>
+    <div class="profile-picture" style="background-image: url({{ comment.author.getImage }})"></div>
+    <div class="text">
+      <a href="{% url 'profile' comment.author.id %}">{{ comment.author.username }}</a><br>
       {{ comment.created_at|pretty_timesince }}<br>
-      {% if show_project %}
-      on <a href="{{ comment.project.get_absolute_url }}">{{ comment.project.name|truncatechars:30 }}</a>
-      {% endif %}
     </div>
   </div>
 
